--- a/canvas/css/canvas.css
+++ b/canvas/css/canvas.css
@@ -74,8 +74,8 @@ a{text-decoration:none;}
 	/* background-size:100%; */
 	/* background:#000; */
 	
-	background:url(../image/casimg.jpg);
-	background-size:100% 50%;
+	background:url(../image/casimg.jpg) 0 100%;
+	background-size:100% 200%;
 	animation:toAhead 4s linear infinite;
 }
 
@@ -84,12 +84,12 @@ a{text-decoration:none;}
 	height:300px;
 	width:240px;
 	
-	background:url(../image/redpage.png) 0 100% repeat-y;	
+	background:url(../image/redpage.png);
 	animation:toAhead 0.6s linear infinite;
 }
 
 @keyframes toAhead{
-	100%{background-position:0 100%;}
+	100%{background-position:0 0;}
 }
 
 
