--- a/wpk/src/css/base.css
+++ b/wpk/src/css/base.css
@@ -1,6 +1,6 @@
 body{
     background:#f0f0f0;
-	font:14px/1.6 
+	font:14px/1.6 proxima-nova,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Micro Hei Mono","WenQuanYi Zen Hei","WenQuanYi Zen Hei","Apple LiGothic Medium",SimHei,"ST Heiti","WenQuanYi Zen Hei Sharp";
 }
 .con{
 	width:300px;
